# 3d_viewer

./: .gitignore  CMakeLists.txt  README.md  README_RUS.md  README_UZB.md
src/: Makefile  s21_3d_viewer.cpp
src/controller/: s21_controller.cpp  s21_controller.h
src/dvi/: Doxyfile
src/gif/gifimage/: gifimage.pro  qgifglobal.h  qgifimage.cpp  qgifimage.h  qgifimage_p.h  qtgifimage.pri
src/model/affine/: s21_affine.h
src/model/affine/transform/: s21_transform_centralize.cpp  s21_transform_change_scale.cpp  s21_transform_normalize.cpp  s21_transform_rotate_x.cpp  s21_transform_rotate_y.cpp  s21_transform_rotate_z.cpp  s21_transform_shift.cpp  s21_transformation.h
src/model/affine/utils/: s21_utils_vector.cpp  s21_utils_vector.h
src/model/constants/: s21_constants.h
src/model/object/: s21_object_model.cpp  s21_object_model.h
src/model/parser/: s21_model_parser.cpp  s21_parser.cpp  s21_parser.h  s21_polygon_parser.cpp  s21_vertex_parser.cpp
src/model/validation/: s21_validator.cpp  s21_validator.h
src/model/vertex/: s21_vertex_manager.cpp  s21_vertex_manager.h
src/tests/: s21_tests.cpp  s21_tests.h
src/tests/affine_tests/: s21_affine_tests.cpp
src/tests/object_tests/: s21_object_tests.cpp
src/tests/parser_tests/: s21_parser_tests.cpp
src/tests/validation_tests/: s21_validation_tests.cpp
src/tests/vertex_tests/: s21_vertex_tests.cpp
src/view/: .gitignore  mainwindow.ui  ui_mainwindow.h  view.pro
src/view/opengl/: s21_open_gl_view.cpp  s21_open_gl_view.h
src/view/qt/: s21_view.cpp  s21_view.h
src/view/settings/: s21_settings_view.h
